[project]
name = "sympheny-toolbox"
version = "0.1.0"
description = "Lightweight Python wrapper for the Sympheny SaaS API to automate common workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = []

[build-system]
requires = ["uv_build>=0.11.6,<0.12"]
build-backend = "uv_build"
