[build-system]
requires = ["uv_build>=0.11.6,<0.12"]
build-backend = "uv_build"

[project]
name = "sympheny-toolbox"
version = "0.2.0"
description = "Lightweight Python wrapper for the Sympheny SaaS API to automate common workflows."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
keywords = [
  "sympheny",
  "energy",
  "optimization",
  "urban-planning",
  "sustainability",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: Implementation :: CPython",
]

dependencies = []

[project.urls]
Homepage = "https://www.sympheny.com"
Repository = "https://github.com/urban-sympheny/sympheny-toolbox.git"
Issues = "https://github.com/urban-sympheny/sympheny-toolbox/issues"
